# quant-road

./: AGENTS.md  CLAUDE.md  README.md  pom.xml
python/: .env  .env.example  README.md  pyproject.toml  requirements.txt
python/src/quant_road/: __main__.py  cli.py  config.py  db.py  logging_utils.py
python/src/quant_road/collectors/: akshare_collector.py
python/src/quant_road/services/: __init__.py  async_job_service.py  async_worker_service.py  canary_service.py  execution_feedback_service.py  execution_service.py  market_data_batch_service.py  market_regime_service.py  market_service.py  notification_service.py  pipeline_service.py  report_service.py  risk_service.py  strategy_execution_service.py  strategy_service.py  unified_execution_service.py  valuation_service.py
python/tests/: test_akshare_collector.py  test_async_job_result_persistence.py  test_async_job_service.py  test_async_regression_equivalence.py  test_async_worker_service.py  test_backtest_costs.py  test_canary_service.py  test_cli_full_daily.py  test_config_defaults.py  test_db.py  test_execution_feedback_service.py  test_execution_service.py  test_logging_utils.py  test_ma_dual_strategy.py  test_market_regime_service.py  test_monthly_report.py  test_pipeline_batch.py  test_portfolio_allocator.py  test_risk_service.py  test_shadow_compare.py  test_strategy_batch_execution.py  test_strategy_capabilities.py  test_strategy_execution_service_etf_costs.py  test_strategy_market_regime.py  test_strategy_risk_rules.py  test_strategy_routing.py  test_unified_execution_service.py  test_valuation_service.py
(+320 files in other folders)
